<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">

    <string name="app_name">FrienDiary</string>
    <string name="tab1">Number</string>
    <string name="tab2">Photos</string>
    <string name="tab3">Extra</string>

    <string name="placeholder_name">이름</string>
    <string name="placeholder_number">전화번호</string>
    <string name="page_title">FrienDiary</string>
    <string name="add_number">연락처 추가하기</string>
    <string name="modify_number">연락처 수정하기</string>
    <string name="add_photo">사진 추가하기</string>
    <string name="modify_success">수정 완료!</string>
    <string name="add_memo">메모 작성하기</string>


    <string name="cancel">취소</string>
    <string name="cancel_button_description">Delete card with this btn</string>
    <string name="save">저장</string>

    <string name="dummy_short"> Lorem Ipsum </string>
    <string name="dummy_mid"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </string>
    <string name="dummy_long"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt vitae mauris sed lacinia. Nullam varius est ac mauris placerat, sed sollicitudin nulla gravida. Vestibulum faucibus odio ac lorem lobortis sagittis. Cras sagittis tristique finibus. Pellentesque diam odio, egestas eu scelerisque ut, cursus at sem.  </string>

    <string name="img_description">카드 이미지</string>
    <string name="write_memo">작성하기</string>
    <string name="modify_memo">수정하기</string>
    <string name="modify_memo_title">메모 수정하기</string>
    <string name="delete_btn">삭제하기</string>
</resources>

